--- a/morelia/README
+++ b/morelia/README
@@ -1,4 +1,4 @@
-Morelia ''viridis'' is a PythonLanguage BehaviorDrivenDevelopment platform, conceptually derived from RubyLanguage's CucumberFramework.
+**Morelia *viridis*** is a PythonLanguage BehaviorDrivenDevelopment platform, conceptually derived from RubyLanguage's CucumberFramework.
 
 It is available, fully functional but with very little in the way of instructions, here: http://github.com/Phlip/Morelia/
 
