--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# This is the official list of splinter authors for copyright purposes.
+# This is the official list of Morelia authors for copyright purposes.
 
 Phlip
 Jakub STOLARSKI
